# qt-app

./: main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  pyproject.toml  requirements.txt  teste2.py  teste3.py
061116/101/: nfce_v_0611161011000425900.xml  nfce_v_0611161011000425901.xml  nfce_v_0611161011000425902.xml  nfce_v_0611161011000425903.xml  nfce_v_0611161011000425904.xml  nfce_v_0611161011000431405.xml  nfce_v_0611161011000431406.xml  nfce_v_0611161011000431407.xml  nfce_v_0611161011000431408.xml  nfce_v_0611161011000431409.xml  nfce_v_0611161011000431410.xml  nfce_v_0611161011000431411.xml  nfce_v_0611161011000431412.xml  nfce_v_0611161011000431413.xml  nfce_v_0611161011000431414.xml  nfce_v_0611161011000431415.xml  nfce_v_0611161011000431416.xml  nfce_v_0611161011000431417.xml  nfce_v_0611161011000431418.xml  nfce_v_0611161011000431419.xml  nfce_v_0611161011000431420.xml  nfce_v_0611161011000431421.xml  nfce_v_0611161011000431422.xml  nfce_v_0611161011000431423.xml  nfce_v_0611161011000431424.xml  nfce_v_0611161011000431425.xml  nfce_v_0611161011000431426.xml  nfce_v_0611161011000431427.xml  nfce_v_0611161011000431428.xml  nfce_v_0611161011000431429.xml  nfce_v_0611161011000431430.xml  nfce_v_0611161011000431431.xml  nfce_v_0611161011000431432.xml  nfce_v_0611161011000431433.xml  nfce_v_0611161011000431434.xml  nfce_v_0611161011000431435.xml  nfce_v_0611161011000431436.xml  nfce_v_0611161011000431437.xml  nfce_v_0611161011000431438.xml  nfce_v_0611161011000431439.xml  (+43 more)
061116/102/: nfce_v_0611161021000429520.xml  (+57 more)
(+786 files in other folders)
